# learnopengl-gtk3

./: .gitlab-ci.yml  bitbucket-pipelines.yml  meson.build
10.2/: main.c  shader_make.c
10.3/: main.c  meson.build  shader_make.c
10.3/shader/: shader.vert
10.4/: main.c  shader_make.c
10.7/: main.c  shader_make.c
10.8/: main.c  shader_make.c
10.8/shader/: shader.vert
12.2/: main.c  meson.build  shader_make.c
13.1/: main.c  shader_make.c
13.1/shader/: container.frag
13.4/: main.c  meson.build  shader_make.c
13.4/shader/: container.frag  container.fragment.glsl  light.vert
13.6/: main.c  meson.build  shader_make.c
13.6/shader/: container.vert  container.vertex.glsl
13.7.1/: main.c  shader_make.c
13.7.1/shader/: container.frag  container.fragment.glsl
13.7.3/: main.c  shader_make.c
13.7.3/shader/: container.frag  container.vert  container.vertex.glsl
14.1/: main.c  meson.build  shader_make.c
14.1/shader/: container.frag  container.fragment.glsl
14.2/: main.c  shader_make.c
14.3/: main.c  shader_make.c
14.4.1/: main.c  meson.build  shader_make.c  shader_make.h
14.4.1/shader/: container.frag  container.fragment.glsl
15.1/: main.c  shader_compile.c  shader_make.c
15.1/shader/: container.frag  container.fragment.glsl  container.vert
15.2/: main.c
15.3/: main.c  meson.build  shader_make.c
15.3/shader/: container.frag  container.vert
16.1/: main.c  meson.build  shader_make.c  shader_make.h
16.1/shader/: container.frag  container.fragment.glsl
16.3/: main.c  shader_make.c  shader_make.h
16.3/shader/: container.frag  container.fragment.glsl
16.5/: main.c  meson.build  shader_make.c
16.5/shader/: container.frag  container.vert
16.6/: main.c  meson.build  shader_make.c
16.6/shader/: container.frag  container.vertex.glsl
17.3/: main.c  shader_make.c
17.3/shader/: container.frag  container.fragment.glsl
4/: main.c  meson.build
4.6/: main.c  meson.build
5.5/: main.c  meson.build  shader_make.c
5.6/: main.c  meson.build  shader_make.c
5.8.1/: main.c  meson.build  shader_make.c
5.8.2/: main.c  meson.build  shader_compile.h  shader_make.c
5.8.3/: main.c  meson.build  shader_make.c  shader_make.h
6.3/: main.c  meson.build  shader_make.c
6.3/shader/: shader.vert  vertex.glsl
6.4/: main.c  meson.build  shader_make.c
6.5/: main.c  meson.build  shader_make.c
6.5/shader/: shader.vert
6.8.1/: main.c  meson.build  shader_make.c  shader_make.h
6.8.1/shader/: shader.vert
6.8.2/: main.c  shader_make.c
6.8.2/shader/: shader.vert  vertex.glsl
6.8.3/: main.c  meson.build  shader_make.c
6.8.3/shader/: shader.vert
7.6/: main.c  meson.build  shader_make.c
7.6/shader/: fragment.glsl  shader.frag
7.7/: main.c  meson.build  shader_make.c
7.7/shader/: shader.vert  vertex.glsl
8.18/: main.c  shader_make.c
8.18/shader/: shader.frag
8.20.1/: main.c  meson.build  shader_make.c
8.20.2/: main.c  meson.build  shader_make.c
8.20.2/shader/: shader.vert
9.7/: main.c  meson.build  shader_make.c
9.7/shader/: shader.frag  shader.vert
9.8/: main.c  shader_make.c
9.8.1/: main.c  meson.build  shader_make.c
9.8.1a/: cilinder.c  data.c  icosahedron.c  main.c  meson.build  shader_make.c  torus.c
9.8.2/: main.c  meson.build  shader_make.c
include/: glmath.h
(+4 files in other folders)
