project('learnopengl.com', 'c', version: '0.0.1')
add_project_arguments(['-Wno-unused-parameter'], language: 'c')

ld = find_program('ld')

glmath_inc = include_directories('include')

m_dep = meson.get_compiler('c').find_library('m', required: false)
epoxy_dep = dependency('epoxy')
glib_dep = dependency('glib-2.0')
gtk_dep = dependency('gtk+-3.0', version: '>= 3.16')
gdk_pixbuf_dep = dependency('gdk-pixbuf-2.0', version: '>= 2.32')

subdir('4')
subdir('4.6')
subdir('5.5')
subdir('5.6')
subdir('5.8.1')
subdir('5.8.2')
subdir('5.8.3')
subdir('6.3')
subdir('6.4')
subdir('6.5')
subdir('6.8.1')
subdir('6.8.2')
subdir('6.8.3')
subdir('7.6')
subdir('7.7')
subdir('8.18')
subdir('8.20.1')
subdir('8.20.2')
subdir('9.7')
subdir('9.8')
subdir('9.8.1')
subdir('9.8.2')
subdir('10.2')
subdir('10.3')
subdir('10.4')
subdir('10.7')
subdir('10.8')
subdir('12.2')
subdir('13.1')
subdir('13.4')
subdir('13.6')
subdir('13.7.1')
subdir('13.7.3')
subdir('14.1')
subdir('14.2')
subdir('14.3')
subdir('14.4.1')
subdir('15.1')
subdir('15.3')
subdir('16.1')
subdir('16.3')
subdir('16.5')
subdir('16.6')
subdir('17.3')
